# lumi

./: .gitignore  Cargo.toml  README.md  config.yaml  example.config.toml  go.mod  go.sum  justfile  lumi.go  lumi_test.go  routes.md
.github/workflows/: auto-release.yml  deploy.yml  release-on-version-change.yml
api/: api.go  buckets.go  errhandler.go  objects.go
cmd/: generate.go  serve.go  update.go
core/: app.go  app_test.go  credentials.go  credentials_test.go  db.go  server.go  signature.go  utils.go
crates/cluster/: Cargo.toml  README.md
crates/cluster/src/: node.rs
crates/credentials/: Cargo.toml
crates/credentials/src/: aws_sigv4.rs  credentials.rs  lib.rs
crates/database/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs  middleware.rs  xml.rs
crates/server/src/routes/: bucket.rs  mod.rs  object.rs
crates/server/src/routes/bucket/: handler.rs  operations.rs
crates/server/src/routes/object/: handler.rs  mod.rs  operations.rs
crates/utils/: Cargo.toml
crates/utils/src/: errors.rs  lib.rs  update.rs
db/: lumi.db
docs/: rest-api.md  routes.md
lumi/: Cargo.toml
lumi/src/: main.rs
s3/: auth.go  credentials.go  credentials_test.go  errors.go  middleware.go  signature-v4-parser.go  utils.go  v4_signature.go
src/: lib.rs  main.rs  server.rs
src/api/: buckets.rs  mod.rs  objects.rs  server.rs
src/aws/iam/: mod.rs  policies.rs  users.rs
src/core/: app.rs  config.rs  mod.rs  xml.rs
src/db/: sqlite.rs
src/discord/: webhook.rs
src/s3/: api_errors.rs  credentials.rs  errors.rs  middleware.rs  middleware_v2.rs  mod.rs  policies.rs  signature_parser.rs  xml.rs
src/user_agent/: generate.rs
test/: list-objects.js  package.json
