[workspace]
members = [
    "lumi",
    "crates/database",
    "crates/utils",
    "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "2.0.0+rc1"
license = "MIT"

[workspace.dependencies]
# /crates/*
lumi_server = { path = "crates/server", version = "*"}
lumi_utils = { path = "crates/utils" }
# external packages
axum = "0.8.8"
quick-xml = "0.38.4"
reqwest = { version = "0.13.1", features = ["blocking", "json"]}
tower-http = { version = "0.6.8" , features = ["full"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.54", features = ["derive"]}