[workspace]
members = [
    "lumi",
    "crates/utils",
    "crates/server", "crates/cluster", "crates/credentials",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "2.0.0+rc1"
license = "MIT"

[workspace.dependencies]
# /crates/*
lumi_server = { path = "crates/server", version = "*"}
lumi_utils = { path = "crates/utils" }
lumi_credentials = { path = "crates/credentials"}
# external packages
axum = "0.8.8"
quick-xml = { version = "0.39.0", features = ["serialize"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"]}
tower-http = { version = "0.6.8" , features = ["full"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full", "fs"] }
tokio-util = { version = "0.7.18", features = ["io"] }
lazy_static = "1.5.0"
clap = { version = "4.5.54", features = ["derive"]}
chrono = "0.4.43"
rand = "0.9.2"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"