[package]
name = "lumi_server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
quick-xml = { workspace = true }
lumi_utils = { workspace = true }